--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -2,6 +2,32 @@
   <md-content layout-fill class="transparentBackground">
     <md-tabs layout-fill class="loginTab">
       <md-tab id="tab1">
+        <md-tab-label>Users</md-tab-label>
+        <md-tab-body>
+          <md-list flex="">
+            <md-list-item ng-hide="$search.$searchService.users && $search.$searchService.users.length > 0">No results found</md-list-item>
+            <md-list-item ng-repeat="user in $search.$searchService.users" class="whiteBackground listItem">
+              <md-button ng-click="$search.goToProfile(user.username)">{{ user.username }}</md-button>
+            </md-list-item>
+          </md-list>
+        </md-tab-body>
+      </md-tab>
+      <md-tab id="tab2">
+        <md-tab-label>Hashtags</md-tab-label>
+        <md-tab-body>
+          <md-list flex="">
+            <md-list-item ng-hide="$search.$searchService.hashtags && $search.$searchService.hashtags.length > 0">No results found</md-list-item>
+            <md-list-item ng-repeat="hashtag in $search.$searchService.hashtags" class="listItem md-3-line">
+              <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
+                <p>#{{ hashtag.label }}</p>
+                <p>First Used: {{ hashtag.firstUsed | date:'medium' }}</p>
+                <p>Last Used: {{ hashtag.lastUsed | date:'medium' }}</p>
+              </div>
+            </md-list-item>
+          </md-list>
+        </md-tab-body>
+      </md-tab>
+      <md-tab id="tab3">
         <md-tab-label>Tweets with Hashtag</md-tab-label>
         <md-tab-body>
           <md-list flex="">
@@ -30,18 +56,7 @@
           </md-list>
         </md-tab-body>
       </md-tab>
-      <md-tab id="tab2">
-        <md-tab-label>Users</md-tab-label>
-        <md-tab-body>
-          <md-list flex="">
-            <md-list-item ng-hide="$search.$searchService.users && $search.$searchService.users.length > 0">No results found</md-list-item>
-            <md-list-item ng-repeat="user in $search.$searchService.users" class="whiteBackground">
-              <md-button ng-click="$search.goToProfile(user.username)">{{ user.username }}</md-button>
-            </md-list-item>
-          </md-list>
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab3">
+      <md-tab id="tab4">
         <md-tab-label>Mentions</md-tab-label>
         <md-tab-body>
           <md-list flex="">
