--- a/src/main.css
+++ b/src/main.css
@@ -9,11 +9,16 @@
 .pageWidth {
   width: 90vw;
 }
+
 .pageHeight {
   height: 80vh;
 }
 
 .tweetListItem {
+  padding: 5px;
+}
+
+.listItem {
   padding: 5px;
 }
 
