minor fixes to follow search bar and renaming

--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -5,14 +5,14 @@
       <input class="searchInput md-whiteframe-6dp" placeholder=" Search Following/Following" type="text" ng-model="$follow.inputText">
     </md-input-container>
   </form>
-  <md-tabs layout-fill class="loginTab" ng-click="$follow.setFollowerTabTrue()">
-    <md-tab label="Follower">
+  <md-tabs layout-fill class="loginTab" >
+    <md-tab label="Follower" ng-click="$follow.setFollowerTabTrue()">
       <md-tab-body>
         <md-list flex>
           <md-list-item ng-hide="$follow.getfollower().length > 0">Nobody follows you</md-list-item>
           <md-list-item class="tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
             <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
-              <md-button ng-click="$follow.google(item.username)">{{item.username}}</md-button>
+              <md-button class ="followButton" ng-click="$follow.goToProfileFollow(item.username)">{{item.username}}</md-button>
             </div>
           </md-list-item>
         </md-list>
@@ -24,7 +24,7 @@
           <md-list-item ng-hide="$follow.getfollowing().length > 0">You follow nobody</md-list-item>
           <md-list-item class="tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
             <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
-              <md-button class="followButton" ng-click="$follow.google(item.username)">{{item.username}}</md-button>
+              <md-button class="followButton" ng-click="$follow.goToProfileFollow(item.username)">{{item.username}}</md-button>
             </div>
           </md-list-item>
         </md-list>
