--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -11,6 +11,7 @@
         <md-button ng-click="$feed.$tweetService.unlikeTweet(tweet)" ng-show="tweet.liked" class="unlike">Unlike</md-button>
         <md-button ng-click="$feed.$tweetService.repostTweet(tweet.id)" class="repost">repost</md-button>
         <md-button ng-click="$feed.$tweetService.showTweetPrompt($event, tweet.id)" class="reply">reply</md-button>
+        <md-button ng-click="$feed.$tweetService.deleteTweet(tweet)" ng-show="tweet.author.username == $feed.$authenticateService.username" class="unlike">Delete</md-button>
       </div>
       <p compile="tweet.content" style="font-size:20px; color:black"></p>
       <div ng-show='tweet.inReplyTo'>
