--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -1,18 +1,18 @@
-<md-toolbar layout="row" class="followButton" flex>
-  <form class="searchForm" autocomplete="off" ng-submit = "$follow.getTargetFollows()">
-    <md-input-container md-no-float class="searchContainer">
-      <input class="searchInput md-whiteframe-6dp" placeholder=" Search Follower/ing" type="text" ng-model="$follow.inputText">
-    </md-input-container>
-  </form>
-</md-toolbar>
+<form class="searchForm transparentBackground" autocomplete="off" ng-submit = "$follow.getTargetFollows()" >
+  <md-input-container md-no-float class="searchFollow">
+    <input class="searchInput md-whiteframe-6dp" placeholder=" Search Follower/Following" type="text" ng-model="$follow.inputText">
+  </md-input-container>
+</form>
 <md-content layout-fill class="transparentBackground">
 
-
   <md-tabs layout-fill class="loginTab" >
+
+
     <md-tab label="Follower" ng-click="$follow.setFollowerTabTrue()">
       <md-tab-body>
         <md-list flex>
-          <md-list-item class="tweetListItem" ng-repeat="item in $follow.getfollow()">
+          <md-list-item ng-hide="$follow.getfollower().length > 0">Nobody follows you</md-list-item>
+          <md-list-item class="tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
             <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
               <md-button class ="followButton" ng-click="$follow.goToProfileFollow(item.username)">{{item.username}}</md-button>
             </div>
@@ -20,10 +20,11 @@
         </md-list>
       </md-tab-body>
     </md-tab>
-    <md-tab label="Following">
+    <md-tab label="Following" ng-click="$follow.setFollowingTabFalse()">
       <md-tab-body>
         <md-list flex>
-          <md-list-item  class="tweetListItem" ng-repeat="item in $follow.getfollowing()">
+          <md-list-item ng-hide="$follow.getfollowing().length > 0">You follow nobody</md-list-item>
+          <md-list-item class="tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
             <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
               <md-button class="followButton" ng-click="$follow.goToProfileFollow(item.username)">{{item.username}}</md-button>
             </div>
