--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,7 @@
 }
 
 .pageHeight {
-  height: 80vh;
+  height: 70vh;
 }
 
 .tweetListItem {
@@ -66,7 +66,7 @@
 }
 
 .transparentBackground {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .whiteBackground {
@@ -92,8 +92,7 @@
 }
 
 .searchFollow {
-  width: 17.5vw;
-  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 md-dialog {
