--- a/src/main.css
+++ b/src/main.css
@@ -172,5 +172,6 @@ html {
 }
 
 .followButton {
-   min-width: 15vw;
+  background: linear-gradient(-90deg, white, turquoise);
+  min-width: 15vw;
 }
