--- a/src/app/mainpage/page/home/home.component.html
+++ b/src/app/mainpage/page/home/home.component.html
@@ -1,17 +1,17 @@
 <md-list flex="">
-  <md-list-item ng-hide="$feed.getFeed()  && $feed.getFeed().length > 0">No results found</md-list-item>
-  <md-list-item class="md-3-line tweetListItem" ng-repeat="tweet in $feed.getFeed()">
+  <md-list-item ng-hide="$home.getFeed()  && $home.getFeed().length > 0">No results found</md-list-item>
+  <md-list-item class="md-3-line tweetListItem" ng-repeat="tweet in $home.getFeed()">
     <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
       <div class="tweetHead">
         <div class="author">
           <h2>Author: <a href="" ng-click="$profileService.goToProfile(tweet.author.username)">{{ tweet.author.username }}</a></h2>
           <p>Posted: {{ tweet.posted | date:'medium' }}</p>
         </div>
-        <md-button ng-click="$feed.$tweetService.likeTweet(tweet)" ng-hide="tweet.liked" class="like">Like</md-button>
-        <md-button ng-click="$feed.$tweetService.unlikeTweet(tweet)" ng-show="tweet.liked" class="unlike">Unlike</md-button>
-        <md-button ng-click="$feed.$tweetService.repostTweet(tweet.id)" class="repost">repost</md-button>
-        <md-button ng-click="$feed.$tweetService.showTweetPrompt($event, tweet.id)" class="reply">reply</md-button>
-        <md-button ng-click="$feed.$tweetService.deleteTweet(tweet)" ng-show="tweet.author.username == $feed.$authenticateService.username" class="unlike">Delete</md-button>
+        <md-button ng-click="$home.$tweetService.likeTweet(tweet)" ng-hide="tweet.liked" class="like">Like</md-button>
+        <md-button ng-click="$home.$tweetService.unlikeTweet(tweet)" ng-show="tweet.liked" class="unlike">Unlike</md-button>
+        <md-button ng-click="$home.$tweetService.repostTweet(tweet.id)" class="repost">repost</md-button>
+        <md-button ng-click="$home.$tweetService.showTweetPrompt($event, tweet.id)" class="reply">reply</md-button>
+        <md-button ng-click="$home.$tweetService.deleteTweet(tweet)" ng-show="tweet.author.username == $home.$authenticateService.username" class="unlike">Delete</md-button>
       </div>
       <p compile="tweet.content" style="font-size:20px; color:black"></p>
       <div ng-show='tweet.inReplyTo'>
