--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -7,7 +7,7 @@
           <md-list flex="">
             <md-list-item ng-hide="$search.$searchService.users && $search.$searchService.users.length > 0">No results found</md-list-item>
             <md-list-item ng-repeat="user in $search.$searchService.users" class="whiteBackground listItem">
-              <md-button ng-click="$search.goToProfile(user.username)">{{ user.username }}</md-button>
+              <md-button ng-click="goToProfile(user.username)">{{ user.username }}</md-button>
             </md-list-item>
           </md-list>
         </md-tab-body>
@@ -32,28 +32,7 @@
         <md-tab-body>
           <md-list flex="">
             <md-list-item ng-hide="$search.$searchService.tweets && $search.$searchService.tweets.length > 0">No results found</md-list-item>
-            <md-list-item class="md-3-line tweetListItem" ng-repeat="tweet in $search.getTweets()">
-              <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
-                <div class="tweetHead">
-                  <div class="author">
-                    <h2>Author: <a href="" ng-click="$search.goToProfile(tweet.author.username)">{{ tweet.author.username }}</a></h2>
-                    <p>Posted: {{ tweet.posted | date:'medium' }}</p>
-                  </div>
-                  <md-button ng-click="$search.$tweetService.likeTweet(tweet)" ng-hide="tweet.liked" class="like">Like</md-button>
-                  <md-button ng-click="$search.$tweetService.unlikeTweet(tweet)" ng-show="tweet.liked" class="unlike">Unlike</md-button>
-                  <md-button ng-click="$search.$tweetService.repostTweet(tweet.id)" class="repost">repost</md-button>
-                  <md-button ng-click="$search.$tweetService.showTweetPrompt($event, tweet.id)" class="reply">reply</md-button>
-                  <md-button ng-click="$search.$tweetService.deleteTweet(tweet)" ng-show="tweet.author.username == $search.$authenticateService.username" class="unlike">Delete</md-button>
-                </div>
-                <p compile="tweet.content" style="font-size:20px; color:black"></p>
-                <div ng-show='tweet.inReplyTo'>
-                  <h3>In Reply To: <a href ng-click="$search.goToProfile(tweet.inReplyTo.author.username)">{{ tweet.inReplyTo.author.username }}</a>: <a href ng-click="null">{{ tweet.inReplyTo.content }}</a></h3>
-                </div>
-                <div ng-show='tweet.repostOf'>
-                  <h3>Repost Of: <a href ng-click="$search.goToProfile(tweet.repostOf.author.username)">{{ tweet.repostOf.author.username }}</a>: <a href ng-click="null">{{ tweet.repostOf.content }}</a></h3>
-                </div>
-              </div>
-            </md-list-item>
+            <tweet class="md-3-line tweetListItem" tweet="tweet" ng-repeat="tweet in $search.getTweets()"></tweet>
           </md-list>
         </md-tab-body>
       </md-tab>
@@ -62,28 +41,7 @@
         <md-tab-body>
           <md-list flex="">
             <md-list-item ng-hide="$search.$searchService.mentioned && $search.$searchService.mentioned.length > 0">No results found</md-list-item>
-            <md-list-item class="md-3-line tweetListItem" ng-repeat="tweet in $search.$searchService.mentioned">
-              <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
-                <div class="tweetHead">
-                  <div class="author">
-                    <h2>Author: <a href="" ng-click="$search.goToProfile(tweet.author.username)">{{ tweet.author.username }}</a></h2>
-                    <p>Posted: {{ tweet.posted | date:'medium' }}</p>
-                  </div>
-                  <md-button ng-click="$search.$tweetService.likeTweet(tweet)" ng-hide="tweet.liked" class="like">Like</md-button>
-                  <md-button ng-click="$search.$tweetService.unlikeTweet(tweet)" ng-show="tweet.liked" class="unlike">Unlike</md-button>
-                  <md-button ng-click="$search.$tweetService.repostTweet(tweet.id)" class="repost">repost</md-button>
-                  <md-button ng-click="$search.$tweetService.showTweetPrompt($event, tweet.id)" class="reply">reply</md-button>
-                  <md-button ng-click="$search.$tweetService.deleteTweet(tweet)" ng-show="tweet.author.username == $search.$authenticateService.username" class="unlike">Delete</md-button>
-                </div>
-                <p compile="tweet.content" style="font-size:20px; color:black"></p>
-                <div ng-show='tweet.inReplyTo'>
-                  <h3>In Reply To: <a href ng-click="$search.goToProfile(tweet.inReplyTo.author.username)">{{ tweet.inReplyTo.author.username }}</a>: <a href ng-click="null">{{ tweet.inReplyTo.content }}</a></h3>
-                </div>
-                <div ng-show='tweet.repostOf'>
-                  <h3>Repost Of: <a href ng-click="$search.goToProfile(tweet.repostOf.author.username)">{{ tweet.repostOf.author.username }}</a>: <a href ng-click="null">{{ tweet.repostOf.content }}</a></h3>
-                </div>
-              </div>
-            </md-list-item>
+            <tweet class="md-3-line tweetListItem" tweet="tweet" ng-repeat="tweet in $search.$searchService.mentioned"></tweet>
           </md-list>
         </md-tab-body>
       </md-tab>
