--- a/src/app/mainpage/tweet/tweet.component.html
+++ b/src/app/mainpage/tweet/tweet.component.html
@@ -1,4 +1,4 @@
-<md-list-item>
+<md-list-item class="md-3-line tweetListItem">
   <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
     <div class="tweetHead">
       <div class="author">
