--- a/src/app/mainpage/page/profile/profile.component.html
+++ b/src/app/mainpage/page/profile/profile.component.html
@@ -12,5 +12,5 @@
 </h3>
 <md-list flex="">
   <md-list-item ng-hide="$profileService.getTweets()  && $profileService.geTtweets().length > 0">No results found</md-list-item>
-  <tweet class="md-3-line tweetListItem" tweet="tweet" ng-repeat="tweet in $profileService.getTweets()"></tweet>
+  <tweet tweet="tweet" ng-repeat="tweet in $profileService.getTweets()"></tweet>
 </md-list>
