all tabs now stretch to fill their tabs container. they are still not evenly spaced and are instead spaced based on their contents. can't be bothered to fix it.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <md-content layout-align="center center" layout="column" layout-fill class="ocean-background">
-  <md-tabs md-dynamic-height md-border-bottom class="loginTab">
+  <md-tabs class="loginTab" md-dynamic-height md-border-bottom md-stretch-tabs="always">
     <md-tab id="tab1">
-      <md-tab-label>Current User</md-tab-label>
+      <md-tab-label>Login</md-tab-label>
       <md-tab-body>
         <current></current>
       </md-tab-body>
