--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -5,7 +5,7 @@
     </md-input-container>
   </form>
   <md-content layout-fill class="transparentBackground">
-    <md-tabs layout-fill>
+    <md-tabs layout-fill md-stretch-tabs="always">
       <md-tab label="Follower" ng-click="$follow.setFollowerTabTrue()">
         <md-tab-body>
           <md-list flex>
