--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="searchPageWidth pageHeight" layout-padding layout = "row">
   <md-content layout-fill class="transparentBackground">
-    <md-tabs layout-fill class="loginTab">
+    <md-tabs layout-fill class="loginTab" md-stretch-tabs="always">
       <md-tab id="tab1">
         <md-tab-label>Users</md-tab-label>
         <md-tab-body>
