--- a/src/app/mainpage/page/page.component.html
+++ b/src/app/mainpage/page/page.component.html
@@ -3,7 +3,7 @@
   <follow layout="column" flex="30"></follow>
 
   <md-content layout-fill class="transparentBackground">
-    <md-tabs layout-fill class="loginTab">
+    <md-tabs layout-fill class="loginTab" md-stretch-tabs="always">
       <md-tab id="tab1">
         <md-tab-label>{{$page.$stateService.currentTab}}</md-tab-label>
         <md-tab-body>
