--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -11,7 +11,7 @@
           <md-list flex>
             <md-list-item ng-hide="$follow.getFollower().length > 0">Nobody follows you</md-list-item>
             <md-list-item ng-hide="$follow.getFollower().length === 0 || $follow.getTargetFollows().length > 0"> No results for {{$follow.inputText}}</md-list-item>
-            <md-list-item class="tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
+            <md-list-item class="md-3-line tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
               <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
                 <md-button class ="followButton" ng-click="goToProfile(item.username)">
                     <i class="material-icons profileButtonIcon">person</i>
@@ -27,7 +27,7 @@
           <md-list flex>
             <md-list-item ng-hide="$follow.getFollowing().length > 0">You follow nobody</md-list-item>
             <md-list-item ng-hide="$follow.getFollowing().length === 0 || $follow.getTargetFollows().length > 0"> No results for {{$follow.inputText}}</md-list-item>
-            <md-list-item class="tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
+            <md-list-item class="md-3-line tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
               <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
                 <md-button class="followButton" ng-click="goToProfile(item.username)">{{item.username}}</md-button>
               </div>
