--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -11,8 +11,8 @@
           <md-list flex>
             <md-list-item ng-hide="$follow.getFollower().length > 0">Nobody follows you</md-list-item>
             <md-list-item ng-hide="$follow.getFollower().length === 0 || $follow.getTargetFollows().length > 0"> No results for {{$follow.inputText}}</md-list-item>
-            <md-list-item class="md-3-line tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
-              <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
+            <md-list-item class="tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
+              <div class="md-list-item-text md-whiteframe-3dp followListItem whiteBackground" layout="column">
                 <md-button class ="followButton" ng-click="goToProfile(item.username)">
                     <i class="material-icons profileButtonIcon">person</i>
                     {{item.username}}
@@ -27,8 +27,8 @@
           <md-list flex>
             <md-list-item ng-hide="$follow.getFollowing().length > 0">You follow nobody</md-list-item>
             <md-list-item ng-hide="$follow.getFollowing().length === 0 || $follow.getTargetFollows().length > 0"> No results for {{$follow.inputText}}</md-list-item>
-            <md-list-item class="md-3-line tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
-              <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
+            <md-list-item class="tweetListItem" ng-repeat="item in $follow.getTargetFollows()">
+              <div class="md-list-item-text md-whiteframe-3dp followListItem whiteBackground" layout="column" style="width: 100%">
                 <md-button class="followButton" ng-click="goToProfile(item.username)">{{item.username}}</md-button>
               </div>
             </md-list-item>
