MAJOR changes to tweet layout AND displaying context. Clicking a tweet opens the context and you can still access all buttons except for in the tweet body itself (currently fixing that). Clicking a profile within a tweet also closes the dialog and goes to the profile. Tweets now have fancy icons that change colors and stuff. Changed other random icons.

--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -1,4 +1,4 @@
-<div class="loginTab">
+<div layout-fill class="loginTab">
   <form class="searchForm transparentBackground" autocomplete="off" ng-submit = "$follow.getTargetFollows()" align="center">
     <md-input-container md-no-float class="searchFollow">
       <input class="searchInput md-whiteframe-6dp" placeholder=" Search Follower/Following" type="text" ng-model="$follow.inputText">
