--- a/src/app/mainpage/page/page.component.html
+++ b/src/app/mainpage/page/page.component.html
@@ -1,8 +1,8 @@
-<div class="pageWidth pageHeight" layout-padding layout = "row">
+<div class="pageWidth pageHeight" layout-padding layout="row">
 
-  <follow layout="column" flex="30"></follow>
+  <follow layout-fill layout="column" flex="30"></follow>
 
-  <md-content layout-fill class="transparentBackground">
+  <md-content layout-fill flex="70" class="transparentBackground">
     <md-tabs layout-fill class="loginTab" md-stretch-tabs="always">
       <md-tab id="tab1">
         <md-tab-label>{{$page.$stateService.currentTab}}</md-tab-label>
