--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -2,33 +2,33 @@
   <md-toolbar class="toolbar" layout="row">
     <div class="md-toolbar-tools">
 
-      <md-button class="homeButton md-whiteframe-2dp md-icon-button" ng-click="$menubar.home()">
-        <i class="material-icons" layout="fill" >home</i>
+      <md-button class="md-primary homeButton md-whiteframe-1dp" ng-click="$menubar.home()">
+        <i class="material-icons homeButtonIcon" layout="fill" >home</i>
       </md-button>
 
       <md-menu>
-        <md-button class="md-primary md-whiteframe-2dp" ng-click="$menubar.openMenu($mdOpenMenu, $event)">
+        <md-button class="md-primary md-whiteframe-1dp" ng-click="$menubar.openMenu($mdOpenMenu, $event)">
           <i class="material-icons profileButtonIcon">person</i>
           <text class="profileButtonText">{{$menubar.getUsername()}}</text>
         </md-button>
       <md-menu-content width="4">
         <md-menu-item>
           <md-button ng-click="$menubar.viewProfile()">
-            <i class="material-icons">perm_identity</i>
-            View profile
+            <i class="material-icons profileDropDownIcon">perm_identity</i>
+            <text class="profileDropdownText">View profile</text>
           </md-button>
         </md-menu-item>
         <md-menu-item>
           <md-button ng-click="$menubar.editProfile()">
-            <i class="material-icons">edit</i>
-            Edit profile
+            <i class="material-icons profileDropDownIcon">edit</i>
+            <text class="profileDropdownText">Edit profile</text>
           </md-button>
         </md-menu-item>
         <md-menu-divider></md-menu-divider>
         <md-menu-item>
           <md-button ng-click="$menubar.logout()">
-            <i class="material-icons">directions_run</i>
-            Logout
+            <i class="material-icons profileDropDownIcon">directions_run</i>
+            <text class="profileDropdownText">Logout</text>
           </md-button>
         </md-menu-item>
       </md-menu-content>
@@ -38,7 +38,7 @@
     <svg class="tweetButtonContainer" ng-click="$menubar.showTweetPrompt($event)" width="200" height="200">
       <g ng-mouseover="$menubar.mouseOnTweet($event)" ng-mouseleave="$menubar.mouseOffTweet($event)">
         <polygon class="tweetButton" stroke="white" stroke-width="5" fill="rgb(63,81,181)" points="200,50 150,150 50,150 0,50"/>
-        <text id="tweetIcon" class="tweetButton tweetIcon material-icons" ng-click="$menubar.tweet()" x="76" y="135" fill="white" stroke="rgb(63,81,181)">&#xE0E1;</text>
+        <text id="tweetIcon" class="tweetButton tweetIcon material-icons" ng-click="$menubar.tweet()" x="76" y="135" fill="white" stroke="rgb(63,81,181)">&#xE150;</text>
       </g>
     </svg>
     <span flex></span>
