--- a/src/app/mainpage/tweet/tweet.component.html
+++ b/src/app/mainpage/tweet/tweet.component.html
@@ -1,46 +1,54 @@
-<md-list-item class="md-3-line tweetListItem">
-  <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
-    <div class="tweetHead">
-      <div class="author" ng-click="$tweet.showContext($event)">
-        <h2>
-          <a href="" ng-click="goToProfile($tweet.tweet.author.username)">
-            {{ $tweet.tweet.author.username }}
-          </a>
-        </h2>
-        <p>
-          {{ $tweet.tweet.posted | date:'medium' }}
-        </p>
+<md-list-item class="md-3-line tweetListItem" ng-click="$tweet.showContext($event)">
+  <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="row" layout-align="space-between center">
+    <div class="tweetContainer" layout="column">
+      <div class="tweetHead">
+        <div class="author" layout="row" layout-align="center">
+          <md-button class="tweetAuthorButton md-primary" ng-click="goToProfile($tweet.tweet.author.username)">
+            <text>{{ $tweet.tweet.author.username }}</text>
+          </md-button>
+          <text class="timestamp">
+            {{ $tweet.tweet.posted | date:'medium' }}
+          </text>
+        </div>
       </div>
-      <md-button ng-click="$tweet.$tweetService.likeTweet($tweet.tweet)" ng-hide="$tweet.tweet.liked" class="like">Like</md-button>
-      <md-button ng-click="$tweet.$tweetService.unlikeTweet($tweet.tweet)" ng-show="$tweet.tweet.liked" class="unlike">Unlike</md-button>
-      <md-button ng-click="$tweet.$tweetService.repostTweet($tweet.tweet.id)" class="repost">repost</md-button>
-      <md-button ng-click="$tweet.$tweetService.showTweetPrompt($event, $tweet.tweet.id)" class="reply">reply</md-button>
-      <md-button ng-click="$tweet.$tweetService.deleteTweet($tweet.tweet)" ng-show="$tweet.tweet.author.username == $tweet.$authenticateService.username" class="unlike">Delete</md-button>
+      <p class="tweet" compile="$tweet.tweet.content" style="font-size:20px; padding-left: 2px; padding-top: 0px; color:black"></p>
+      <div ng-show='$tweet.tweet.inReplyTo' class="footer">
+        <div class="footerContainer" layout="column" layout-align="center start">
+          <md-button class="tweetFooterButton md-primary" ng-click="goToProfile($tweet.tweet.inReplyTo.author.username)">
+            <text class="tweetFooterText">{{ $tweet.tweet.inReplyTo.author.username }}</text>
+          </md-button>
+          <md-button layout-align="none" class="tweetFooterTweetButton md-primary" ng-click="null">
+            <text class="tweetFooterText">  {{ $tweet.tweet.inReplyTo.content }}</text>
+          </md-button>
+        </div>
+      </div>
+      <div ng-show='$tweet.tweet.repostOf' class="footer">
+        <div class="footerContainer" layout="column" layout-align="center start">
+          <md-button class="tweetFooterButton md-primary" ng-click="goToProfile($tweet.tweet.repostOf.author.username)">
+            <text class="tweetFooterText">{{ $tweet.tweet.repostOf.author.username }}</text>
+          </md-button>
+          <md-button layout-align="none" class="tweetFooterTweetButton md-primary" ng-click="null">
+            <text class="tweetFooterText">  {{ $tweet.tweet.repostOf.content }}</text>
+          </md-button>
+        </div>
+      </div>
     </div>
-    <p compile="$tweet.tweet.content" style="font-size:20px; color:black"></p>
-    <div ng-show='$tweet.tweet.inReplyTo'>
-      <h3>
-        In Reply To:
-        <a href ng-click="goToProfile($tweet.tweet.inReplyTo.author.username)">
-          {{ $tweet.tweet.inReplyTo.author.username }}
-        </a>
-        :
-        <a href ng-click="null">
-          {{ $tweet.tweet.inReplyTo.content }}
-        </a>
-      </h3>
-    </div>
-    <div ng-show='$tweet.tweet.repostOf'>
-      <h3>
-        Repost Of:
-        <a href ng-click="goToProfile($tweet.tweet.repostOf.author.username)">
-          {{ $tweet.tweet.repostOf.author.username }}
-        </a>
-        :
-        <a href ng-click="null">
-          {{ $tweet.tweet.repostOf.content }}
-        </a>
-      </h3>
+    <div class="tweetButtonContainer">
+      <md-button ng-click="$tweet.$tweetService.deleteTweet($tweet.tweet)" ng-show="$tweet.tweet.author.username == $tweet.$authenticateService.username" class="delete md-icon-button">
+        <i class="tweetIcons material-icons" layout="fill">delete</i>
+      </md-button>
+      <md-button ng-click="$tweet.$tweetService.showTweetPrompt($event, $tweet.tweet.id)" class="reply md-icon-button">
+        <i class="tweetIcons material-icons" layout="fill">reply</i>
+      </md-button>
+      <md-button ng-click="$tweet.$tweetService.repostTweet($tweet.tweet.id)" class="repost md-icon-button">
+        <i class="tweetIcons material-icons" layout="fill">link</i>
+      </md-button>
+      <md-button ng-click="$tweet.$tweetService.likeTweet($tweet.tweet)" ng-hide="$tweet.tweet.liked" class="like md-icon-button">
+        <i class="tweetIcons material-icons" layout="fill">favorite_border</i>
+      </md-button>
+      <md-button ng-click="$tweet.$tweetService.unlikeTweet($tweet.tweet)" ng-show="$tweet.tweet.liked" class="liked md-icon-button">
+        <i class="tweetIcons material-icons" layout="fill">favorite</i>
+      </md-button>
     </div>
   </div>
 </md-list-item>
