--- a/src/main.css
+++ b/src/main.css
@@ -18,6 +18,10 @@
   padding: 5px;
 }
 
+.tweetListItem:hover {
+  cursor: default;
+}
+
 .followListItem {
   width: 100%;
 }
@@ -30,30 +34,113 @@
   display: flex;
 }
 
-.author {
-  display: flex;
-  flex-direction: column;
-  flex: 3;
+.tweetIcons {
+  font-size: 36px;
 }
 
-.repost {
-  background-color: rgba(0, 0, 255, 0.5);
+.tweetAuthorButton {
+
+  margin: 0px;
+  padding-left: 0px;
+  float: left;
+}
+
+.tweetAuthorButton>text {
+  margin-left: 0px;
+  padding-left: 0px;
+  float: left;
+
+  font-size: 32px;
+  font-weight: bold;
+  color: black;
+}
+
+.footer {
+  padding-top: 2px;
+  margin-left: 0px;
+  border: 2px solid #aab8c2;
+  border-radius: 10px;
+}
+
+.footerContainer {
+  float: left;
+}
+
+.tweetFooterButton {
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+.tweetFooterButton>text {
+  padding-left: 8px;
+  font-size: 20px;
+  font-weight: bold;
+  color: black
+}
+
+.tweetFooterTweetButton {
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+.tweetFooterTweetButton>text {
+  padding-left: 8px;
+  font-size: 18px;
+  color: black
+}
+
+
+.timestamp {
+  color: #aab8c2;
+  padding-top: 8px;
+  padding-left: 16px;
+}
+
+.replyIcon {
+
+}
+
+.delete {
+  color: #aab8c2;
+}
+
+.delete:hover {
+  color: rgb(204, 24, 30);
+}
+
+.reply {
+  background-color: rgba(255, 255, 255, 0);
   font-weight: bolder;
 }
 
 .reply {
-  background-color: rgba(0, 0, 255, 0.5);
-  font-weight: bolder;
+  color: #aab8c2;
+}
+
+.reply:hover {
+  color: #1da1f2;
+}
+
+.repost {
+  color: #aab8c2;
+}
+
+.repost:hover {
+  color: #19cf86;
 }
 
 .like {
-  background-color: rgba(0, 255, 0, 0.5);
-  font-weight: bolder;
+  color: #aab8c2;
 }
 
-.unlike {
-  background-color: rgba(255, 0, 0, 0.5);
-  font-weight: bolder;
+.like:hover {
+  color: #e81c4f;
+}
+
+.liked {
+  color: #e81c4f;
 }
 
 .tweetHead.md-button {
@@ -107,11 +194,25 @@ md-dialog {
   text-transform: none;
 }
 
-.profileButtonIcon {
-  text-transform: none;
+.homeButtonIcon {
+  color: rgba(255,255,255,0.9);
+}
+
+.profileDropDownIcon {
+  color: rgb(40, 40, 40);
   margin-top: 6px;
   float: left;
+}
+
+.profileButtonIcon {
   color: rgba(255,255,255,0.87);
+  margin-top: 6px;
+  float: left;
+}
+
+.profileDropdownText {
+  color: rgb(40, 40, 40);
+  padding-left: 8px;
 }
 
 .profileButtonText {
@@ -145,6 +246,10 @@ input[type=text].searchInput {
 i {
   align-items: center;
   justify-content: center;
+}
+
+.tweetContainer {
+  width: 70%
 }
 
 .tweetButton:hover {
