made search button on menubar a square to be consistent

--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -43,8 +43,8 @@
     </svg>
     <span flex></span>
 
-    <md-button class="md-icon-button searchButton md-whiteframe-2dp" ng-click="$menubar.search()">
-      <i layout="fill" class="material-icons">search</i>
+    <md-button class="md-button searchButton md-whiteframe-1dp" ng-click="$menubar.search()">
+      <i layout="fill" class="material-icons search">search</i>
     </md-button>
     <form id="resetForm" class="searchForm" autocomplete="off" ng-submit="$menubar.search()">
       <md-input-container md-no-float class="searchContainer">
