--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -35,8 +35,8 @@
     </md-menu>
 
     <span flex></span>
-    <svg class="tweetButtonContainer" ng-click="$menubar.showTweetPrompt($event)" width="200" height="200">
-      <g ng-mouseover="$menubar.mouseOnTweet($event)" ng-mouseleave="$menubar.mouseOffTweet($event)">
+    <svg class="tweetButtonContainer" width="200" height="200">
+      <g ng-click="$menubar.showTweetPrompt($event)" ng-mouseover="$menubar.mouseOnTweet($event)" ng-mouseleave="$menubar.mouseOffTweet($event)">
         <polygon class="tweetButton" stroke="white" stroke-width="5" fill="rgb(63,81,181)" points="200,50 150,150 50,150 0,50"/>
         <text id="tweetIcon" class="tweetButton tweetIcon material-icons" ng-click="$menubar.tweet()" x="76" y="135" fill="white" stroke="rgb(63,81,181)">&#xE150;</text>
       </g>
