removed outline on tweetButtonIcon and tweetButton

--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -38,7 +38,7 @@
     <svg class="tweetButtonContainer" width="200" height="200">
       <g ng-click="$menubar.showTweetPrompt($event)" ng-mouseover="$menubar.mouseOnTweet($event)" ng-mouseleave="$menubar.mouseOffTweet($event)">
         <polygon class="tweetButton" stroke="white" stroke-width="5" fill="rgb(63,81,181)" points="200,50 150,150 50,150 0,50"/>
-        <text id="tweetIcon" class="tweetButton tweetIcon material-icons" ng-click="$menubar.tweet()" x="76" y="135" fill="white" stroke="rgb(63,81,181)">&#xE150;</text>
+        <text id="tweetButtonIcon" class="tweetButton tweetButtonIcon material-icons" ng-click="$menubar.tweet()" x="76" y="135" fill="white" stroke="rgb(63,81,181)">&#xE150;</text>
       </g>
     </svg>
     <span flex></span>
