--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -6,8 +6,10 @@
         <md-tab-body>
           <md-list flex="">
             <md-list-item ng-hide="$search.$searchService.users && $search.$searchService.users.length > 0">No results found</md-list-item>
-            <md-list-item ng-repeat="user in $search.$searchService.users" class="whiteBackground listItem">
-              <md-button ng-click="goToProfile(user.username)">{{ user.username }}</md-button>
+            <md-list-item ng-repeat="user in $search.$searchService.users" class="listItem userSearch">
+              <div class="md-whiteframe-3dp userListItem whiteBackground" layout-fill>
+                <md-button ng-click="goToProfile(user.username)" class="tweetAuthorButton" layout-fill><text>{{ user.username }}</text></md-button>
+              </div>
             </md-list-item>
           </md-list>
         </md-tab-body>
@@ -18,10 +20,10 @@
           <md-list flex="">
             <md-list-item ng-hide="$search.$searchService.hashtags && $search.$searchService.hashtags.length > 0">No results found</md-list-item>
             <md-list-item ng-repeat="hashtag in $search.$searchService.hashtags" class="listItem md-3-line">
-              <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
-                <p>#{{ hashtag.label }}</p>
-                <p>First Used: {{ hashtag.firstUsed | date:'medium' }}</p>
-                <p>Last Used: {{ hashtag.lastUsed | date:'medium' }}</p>
+              <div class="md-whiteframe-3dp userListItem whiteBackground" layout-fill layout="column">
+                <text style="font-weight:bold; font-size:32px">#{{ hashtag.label }}</text>
+                <text>First Used: {{ hashtag.firstUsed | date:'medium' }}</text>
+                <text>Last Used: {{ hashtag.lastUsed | date:'medium' }}</text>
               </div>
             </md-list-item>
           </md-list>
