remove form reset for searches

--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -46,7 +46,7 @@
     <md-button class="md-button searchButton md-whiteframe-1dp" ng-click="$menubar.search()">
       <i layout="fill" class="material-icons search">search</i>
     </md-button>
-    <form id="resetForm" class="searchForm" autocomplete="off" ng-submit="$menubar.search()">
+    <form class="searchForm" autocomplete="off" ng-submit="$menubar.search()">
       <md-input-container md-no-float class="searchContainer">
         <input class="searchInput md-whiteframe-6dp" placeholder=" Search Twitter" type="text" ng-model="$menubar.$searchService.inputText" >
       </md-input-container>
